# vim-crypto

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
plugin/: vim-crypto.vim
src/: client.rs  common.rs  crypto.rs  error.rs  event.rs  main.rs  messages.rs  request.rs  table.rs
