[package]
name      = "vim-crypto"
version   = "0.1.0"
authors   = ["Liam <liam@scalzulli.com>"]
edition   = "2018"

[dependencies]
chrono         = "0.4.19"
neovim-lib     = "0.6.1"
prettytable-rs = "^0.8"
reqwest        = { version = "0.11", features = ["json"] }
serde          = { version = "1.0", features  = ["derive"] }
serde_json     = "1.0.62"
tokio          = { version = "1", features    = ["full"] }
