[package]
name      = "vim-crypto"
version   = "0.1.0"
authors   = ["Liam <liam@scalzulli.com>"]
edition   = "2018"

[dependencies]
neovim-lib     = "0.6.1"
prettytable-rs = "^0.8"
serde_json     = "1.0.62"
snafu          = "0.6.10"

[dependencies.reqwest]
version  = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version  = "1.0"
features = ["derive"]
